--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -17,7 +17,7 @@ body::before {
   content: "";
   position: fixed;
   inset: 0;
-  background-image: url("../../assets/pattern.png");
+  background-image: url("../../assets/pattern.webp");
   background-repeat: repeat;
   background-size: 100px 100px;
   opacity: 0.25;
